Fixed | Image not centered within div on Mobile

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 		<div class="work module">
 			<figure class="icon-cards mt-3">
 			  <div class="icon-cards__content">
-			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align-last: center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img class="project-img" src="public/img/maint.gif" style="width: 10vw; margin-top:5vh;"></span></div>
-			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align-last: center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
-			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align-last: center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
+			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align: -webkit-center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img class="project-img" src="public/img/maint.gif" style="width: 10vw; margin-top:5vh;"></span></div>
+			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align: -webkit-center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
+			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align: -webkit-center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
 			  </div>
 			</figure>      
 		</div>
