--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="public/img/favicon.ico">
 
 	<title> I am Jadan Jones </title>
 
