--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="public/img/favicon.ico">
 
 	<title> I am Jadan Jones </title>
 
@@ -49,9 +50,9 @@
 		<div class="work module">
 			<figure class="icon-cards mt-3">
 			  <div class="icon-cards__content">
-			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align-last: center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img class="project-img" src="public/img/maint.gif" style="width: 10vw; margin-top:5vh;"></span></div>
-			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align-last: center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
-			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align-last: center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
+			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align: -webkit-center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img class="project-img" src="public/img/maint.gif" style="width: 10vw; margin-top:5vh;"></span></div>
+			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align: -webkit-center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
+			    <div class="icon-cards__item d-flex align-items-center justify-content-center" style="text-align: -webkit-center; color: black; font-family: 'Panton', sans-serif;"><span class="h1"><img src="public/img/maint.gif" class="project-img" style="width: 10vw; margin-top:5vh;"></span></div>
 			  </div>
 			</figure>      
 		</div>
