Edit | Title Change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
 
-	<title> I am Jadan Jones </title>
+	<title>Jadan Jones Web Developer</title>
 
 </head>
 
@@ -28,7 +28,7 @@
 
 	<div class="container">
 		<div class="container-header">
-			<h2>I am a creative developer from Jamaica.</h2>
+			<h2>I am a creative Web developer from Jamaica.</h2>
 		</div>
 
 
