--- a/index.html
+++ b/index.html
@@ -56,7 +56,49 @@
 			  </div>
 			</figure>      
 		</div>
+		<div class="stat work">
+			<!-- start count stats -->
+
+<section id="counter-stats">
+	<div class="contain">
+		<div class="counters">
+
+			<div class="stats">
+				<i class="fa fa-code" aria-hidden="true"></i>
+				<div class="counting" data-count="10000">0</div>
+				<h5>Lines of code</h5>
+			</div>
+
+			<div class="stats">
+				<i class="fa fa-check" aria-hidden="true"></i>
+				<div class="counting" data-count="5">0</div>
+				<h5>Projects done</h5>
+			</div>
+
+			<div class="stats">
+				<i class="fa fa-user" aria-hidden="true"></i>
+				<div class="counting" data-count="3">0</div>
+				<h5>Happy clients</h5>
+			</div>
+
+			<div class="stats">
+				<i class="fa fa-coffee" aria-hidden="true"></i>
+				<div class="counting" data-count="99999">0</div>
+				<h5>Cups of coffee :)</h5>
+			</div>
+
+
+		</div>
+		<!-- end row -->
 	</div>
+	<!-- end container -->
+
+</section>
+
+<!-- end cont stats -->
+		</div>
+	</div>
+
 
 	<div class="contact-div module">
 		<div  class="triangles rellax"data-rellax-speed="1" style="z-index: 10; position:absolute;" > <img  id="tr3" style="float: right;" src="public/img/tri3.png"></div>
@@ -74,7 +116,18 @@
     		</main>
 
     		<nav>
-      			<a href="mailto:spectrecodehub@gmail.com" class="gmail" style="text-align: center;">
+    			<a id="resume" href="JadanJonesResume.pdf" download="download.pdf" class="twitter" style="text-align: center;" >
+			        <div class="icon">
+			        	<svg xmlns="http://www.w3.org/2000/svg" width="16" <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-fill" viewBox="0 0 16 16">
+  <path d="M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2zm5.5 1.5v2a1 1 0 0 0 1 1h2l-3-3z"/>
+</svg>
+			        </div>
+
+			        <div class="content-contact" style="margin-top: 1.5vh;">
+			          <h1>My Resume</h1>
+			        </div>
+      			</a>
+      			<a class="gmail" href="mailto:spectrecodehub@gmail.com" style="text-align: center;">
 	        		<div class="icon">
 	          			<svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M16 3v10c0 .567-.433 1-1 1h-1V4.925L8 9.233 2 4.925V14H1c-.567 0-1-.433-1-1V3c0-.283.108-.533.287-.712C.467 2.107.718 2 1 2h.333L8 6.833 14.667 2H15c.283 0 .533.108.713.288.179.179.287.429.287.712z" fill-rule="evenodd"/></svg>
 	        		</div>
@@ -108,6 +161,7 @@
 			          <h1>Github</h1>
 			        </div>
       			</a>
+
     		</nav>
   		</div>
    		
