--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
 
 	<title>Jadan Jones Web Developer</title>
 
+	<meta name="msapplication-TileImage" content="https://ibb.co/gTk8CqD">
+ 
+	<meta property="og:site_name" content="Jadan Jones Web Developer">
+	<meta property="og:title" content="My Web Development Portfolio">
+	
+	<meta property="og:description" content="Portfolio">
+
+	<meta property="og:image" itemprop="image" content="https://ibb.co/gTk8CqD">
+
+	<meta property="og:type" content="website" />
+	<meta property="og:image:type" content="image/png">
+
+	<meta property="og:image:width" content="300">
+	<meta property="og:image:height" content="300">
+
+<meta property="og:url" content="https://jadanjones.me">
+
 </head>
 
 <body id="main">
