CSS | Added a woks div

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 	<title>Jadan Jones Web Developer</title>
 
-	<meta name="msapplication-TileImage" content="https://ibb.co/gTk8CqD">
+	<meta name="msapplication-TileImage" content="https://i.ibb.co/FwR1tZB/android-chrome-192x192.png">
  
 	<meta property="og:site_name" content="Jadan Jones Web Developer">
 	<meta property="og:title" content="My Web Development Portfolio">
 	
 	<meta property="og:description" content="Portfolio">
 
-	<meta property="og:image" itemprop="image" content="https://ibb.co/gTk8CqD">
+	<meta property="og:image" itemprop="image" content="https://i.ibb.co/FwR1tZB/android-chrome-192x192.png">
 
 	<meta property="og:type" content="website" />
 	<meta property="og:image:type" content="image/png">
