--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<div class="container">
 		<div class="container-header">
-			<h2>I am a web developer from Jamaica.</h2>
+			<h2>I am a creative Web developer from Jamaica.</h2>
 		</div>
 
 
